--- a/public/bairdconklinmath/index.html
+++ b/public/bairdconklinmath/index.html
@@ -1,8 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=http://bairdconklinmusic/bairdconklinmath" />
-  </head>
-  <body>
-  </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=http://bairdconklinmusic.com/bairdconklinmath">
+        <script type="text/javascript">
+            window.location.href = "http://bairdcoinklinmusic/bairdconklinmath";
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://bairdcoinklinmusic/bairdconklinmath'>link to Baird-Conklin Math</a>
+    </body>
 </html>
